feat: add bucket store api
